// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with all props 1`] = `
<div
  className="Modal__overlay__3W6lN"
  onClick={[Function]}
  onScroll={[Function]}
  role="presentation"
>
  <div
    className="Modal__root__1qznC"
    onClick={[Function]}
    role="presentation"
  >
    <div
      className="Modal__head__2Hins"
    >
      <h3
        className="Modal__headTitle__1pyeA"
      >
        workLog:modal.add.title
      </h3>
      <button
        className="Modal__close__32CSY"
        onClick={[Function]}
        title="general:action.close"
        type="button"
      >
        ×
      </button>
    </div>
    <div
      className="Modal__body__12OYJ"
    >
      <p
        className="formErrorText"
      />
      <form>
        <div
          className="centeredLayout"
        >
          <div
            className="List__root__2xV8p"
          >
            <ul
              className="List__list__31oLw
          List__alignLeft__WvLH5"
            >
              <li
                className="List__item__31l9a"
              >
                <p
                  className="formInfoText"
                >
                  workLog:modal.add.alreadySendForApprovalDescription
                </p>
              </li>
              <li
                className="List__item__31l9a"
              >
                <label
                  className="TextField__root__3yDmd
        
        TextField__rootLayoutVertical__3YCcU
        
        TextField__rootSizeMedium__3o17O
        
        TextField__rootVariantOutline__1RuTC"
                  htmlFor="date"
                >
                  <div
                    className="TextField__label__2bJzQ"
                    id="date__label"
                  >
                    workLog:element.date
                  </div>
                  <div
                    className="TextField__inputContainer__3NDux"
                  >
                    <input
                      className="TextField__input__dZrOw"
                      disabled={true}
                      id="date"
                      onChange={null}
                      placeholder={null}
                      required={false}
                      size={null}
                      type="text"
                      value="01.01.2018"
                    />
                  </div>
                </label>
              </li>
              <li
                className="List__item__31l9a"
              >
                <label
                  className="SelectField__root__13lek
        
        SelectField__rootLayoutVertical__1zUMi
        
        SelectField__rootSizeMedium__RKna5
        
        SelectField__rootVariantOutline__24jUj"
                  htmlFor="type"
                >
                  <div
                    className="SelectField__label__MJ9pH"
                    id="type__label"
                  >
                    workLog:element.type
                  </div>
                  <div
                    className="SelectField__inputContainer__1Lkme"
                  >
                    <select
                      className="SelectField__input__15KJ0"
                      disabled={false}
                      id="type"
                      onChange={[Function]}
                      required={false}
                      value="WORK_LOG"
                    >
                      <option
                        id="type__item__WORK_LOG"
                        value="WORK_LOG"
                      >
                        workMonth:constant.type.workLog
                      </option>
                      <option
                        id="type__item__BUSINESS_TRIP_WORK_LOG"
                        value="BUSINESS_TRIP_WORK_LOG"
                      >
                        workMonth:constant.type.businessTripWorkLog
                      </option>
                      <option
                        id="type__item__HOME_OFFICE_WORK_LOG"
                        value="HOME_OFFICE_WORK_LOG"
                      >
                        workMonth:constant.type.homeOfficeWorkLog
                      </option>
                      <option
                        id="type__item__OVERTIME_WORK_LOG"
                        value="OVERTIME_WORK_LOG"
                      >
                        workMonth:constant.type.overtimeWorkLog
                      </option>
                      <option
                        id="type__item__SICK_DAY_WORK_LOG"
                        value="SICK_DAY_WORK_LOG"
                      >
                        workMonth:constant.type.sickDayWorkLog
                      </option>
                      <option
                        id="type__item__TIME_OFF_WORK_LOG"
                        value="TIME_OFF_WORK_LOG"
                      >
                        workMonth:constant.type.timeOffWorkLog
                      </option>
                      <option
                        id="type__item__VACATION_WORK_LOG"
                        value="VACATION_WORK_LOG"
                      >
                        workMonth:constant.type.vacationWorkLog
                      </option>
                    </select>
                    <div
                      className="SelectField__caret__-27wG"
                    >
                      <span
                        className="SelectField__caretIcon__hQwUY"
                      />
                    </div>
                  </div>
                </label>
              </li>
              <li
                className="List__item__31l9a"
              >
                <div
                  className="mb-1"
                >
                  workLog:element.startTime
                </div>
                <div>
                  <div
                    className="fieldDate"
                  >
                    <label
                      className="TextField__root__3yDmd
        
        TextField__rootLayoutVertical__3YCcU
        
        TextField__rootSizeMedium__3o17O
        
        TextField__rootVariantOutline__1RuTC"
                      htmlFor="startHour"
                    >
                      <div
                        className="TextField__label__2bJzQ
          TextField__isLabelHidden__IR-3m"
                        id="startHour__label"
                      >
                        workLog:element.startHour
                      </div>
                      <div
                        className="TextField__inputContainer__3NDux"
                      >
                        <input
                          className="TextField__input__dZrOw"
                          disabled={false}
                          id="startHour"
                          onChange={[Function]}
                          placeholder={null}
                          required={false}
                          size={2}
                          type="text"
                          value="00"
                        />
                      </div>
                    </label>
                  </div>
                  <span
                    className="colon"
                  >
                    :
                  </span>
                  <div
                    className="fieldDate"
                  >
                    <label
                      className="TextField__root__3yDmd
        
        TextField__rootLayoutVertical__3YCcU
        
        TextField__rootSizeMedium__3o17O
        
        TextField__rootVariantOutline__1RuTC"
                      htmlFor="startMinute"
                    >
                      <div
                        className="TextField__label__2bJzQ
          TextField__isLabelHidden__IR-3m"
                        id="startMinute__label"
                      >
                        workLog:element.startMinute
                      </div>
                      <div
                        className="TextField__inputContainer__3NDux"
                      >
                        <input
                          className="TextField__input__dZrOw"
                          disabled={false}
                          id="startMinute"
                          onChange={[Function]}
                          placeholder={null}
                          required={false}
                          size={2}
                          type="text"
                          value="57"
                        />
                      </div>
                    </label>
                  </div>
                   h
                </div>
              </li>
              <li
                className="List__item__31l9a"
              >
                <div
                  className="mb-1"
                >
                  workLog:element.endTime
                </div>
                <div>
                  <div
                    className="fieldDate"
                  >
                    <label
                      className="TextField__root__3yDmd
        
        TextField__rootLayoutVertical__3YCcU
        
        TextField__rootSizeMedium__3o17O
        
        TextField__rootVariantOutline__1RuTC"
                      htmlFor="endHour"
                    >
                      <div
                        className="TextField__label__2bJzQ
          TextField__isLabelHidden__IR-3m"
                        id="endHour__label"
                      >
                        workLog:element.endHour
                      </div>
                      <div
                        className="TextField__inputContainer__3NDux"
                      >
                        <input
                          className="TextField__input__dZrOw"
                          disabled={false}
                          id="endHour"
                          onChange={[Function]}
                          placeholder={null}
                          required={false}
                          size={2}
                          type="text"
                          value="01"
                        />
                      </div>
                    </label>
                  </div>
                  <span
                    className="colon"
                  >
                    :
                  </span>
                  <div
                    className="fieldDate"
                  >
                    <label
                      className="TextField__root__3yDmd
        
        TextField__rootLayoutVertical__3YCcU
        
        TextField__rootSizeMedium__3o17O
        
        TextField__rootVariantOutline__1RuTC"
                      htmlFor="endMinute"
                    >
                      <div
                        className="TextField__label__2bJzQ
          TextField__isLabelHidden__IR-3m"
                        id="endMinute__label"
                      >
                        workLog:element.endMinute
                      </div>
                      <div
                        className="TextField__inputContainer__3NDux"
                      >
                        <input
                          className="TextField__input__dZrOw"
                          disabled={false}
                          id="endMinute"
                          onChange={[Function]}
                          placeholder={null}
                          required={false}
                          size={2}
                          type="text"
                          value="03"
                        />
                      </div>
                    </label>
                  </div>
                   h
                </div>
              </li>
            </ul>
          </div>
        </div>
      </form>
    </div>
    <div
      className="Modal__footer__2YXCJ"
    >
      <button
        className="Button__root__3zrxR
        Button__priorityDefault__hcWO8
        Button__sizeMedium__168V1
        Button__variantPrimary__30PKn"
        disabled={false}
        onClick={[Function]}
        title={null}
        type="button"
      >
        <span
          className="Button__label__3YN6e"
        >
          general:action.save
        </span>
      </button>
      <button
        className="Button__root__3zrxR
        Button__priorityFlat__50w12
        Button__sizeMedium__168V1
        Button__variantPrimary__30PKn"
        disabled={false}
        onClick={[Function]}
        title={null}
        type="button"
      >
        <span
          className="Button__label__3YN6e"
        >
          general:action.close
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`rendering renders correctly with mandatory props 1`] = `
<div
  className="Modal__overlay__3W6lN"
  onClick={[Function]}
  onScroll={[Function]}
  role="presentation"
>
  <div
    className="Modal__root__1qznC"
    onClick={[Function]}
    role="presentation"
  >
    <div
      className="Modal__head__2Hins"
    >
      <h3
        className="Modal__headTitle__1pyeA"
      >
        workLog:modal.add.title
      </h3>
      <button
        className="Modal__close__32CSY"
        onClick={[Function]}
        title="general:action.close"
        type="button"
      >
        ×
      </button>
    </div>
    <div
      className="Modal__body__12OYJ"
    >
      <p
        className="formErrorText"
      />
      <form>
        <div
          className="centeredLayout"
        >
          <div
            className="List__root__2xV8p"
          >
            <ul
              className="List__list__31oLw
          List__alignLeft__WvLH5"
            >
              <li
                className="List__item__31l9a"
              >
                <label
                  className="TextField__root__3yDmd
        
        TextField__rootLayoutVertical__3YCcU
        
        TextField__rootSizeMedium__3o17O
        
        TextField__rootVariantOutline__1RuTC"
                  htmlFor="date"
                >
                  <div
                    className="TextField__label__2bJzQ"
                    id="date__label"
                  >
                    workLog:element.date
                  </div>
                  <div
                    className="TextField__inputContainer__3NDux"
                  >
                    <input
                      className="TextField__input__dZrOw"
                      disabled={true}
                      id="date"
                      onChange={null}
                      placeholder={null}
                      required={false}
                      size={null}
                      type="text"
                      value="01.01.2018"
                    />
                  </div>
                </label>
              </li>
              <li
                className="List__item__31l9a"
              >
                <label
                  className="SelectField__root__13lek
        
        SelectField__rootLayoutVertical__1zUMi
        
        SelectField__rootSizeMedium__RKna5
        
        SelectField__rootVariantOutline__24jUj"
                  htmlFor="type"
                >
                  <div
                    className="SelectField__label__MJ9pH"
                    id="type__label"
                  >
                    workLog:element.type
                  </div>
                  <div
                    className="SelectField__inputContainer__1Lkme"
                  >
                    <select
                      className="SelectField__input__15KJ0"
                      disabled={false}
                      id="type"
                      onChange={[Function]}
                      required={false}
                      value="WORK_LOG"
                    >
                      <option
                        id="type__item__WORK_LOG"
                        value="WORK_LOG"
                      >
                        workMonth:constant.type.workLog
                      </option>
                      <option
                        id="type__item__BUSINESS_TRIP_WORK_LOG"
                        value="BUSINESS_TRIP_WORK_LOG"
                      >
                        workMonth:constant.type.businessTripWorkLog
                      </option>
                      <option
                        id="type__item__HOME_OFFICE_WORK_LOG"
                        value="HOME_OFFICE_WORK_LOG"
                      >
                        workMonth:constant.type.homeOfficeWorkLog
                      </option>
                      <option
                        id="type__item__OVERTIME_WORK_LOG"
                        value="OVERTIME_WORK_LOG"
                      >
                        workMonth:constant.type.overtimeWorkLog
                      </option>
                      <option
                        id="type__item__SICK_DAY_WORK_LOG"
                        value="SICK_DAY_WORK_LOG"
                      >
                        workMonth:constant.type.sickDayWorkLog
                      </option>
                      <option
                        id="type__item__TIME_OFF_WORK_LOG"
                        value="TIME_OFF_WORK_LOG"
                      >
                        workMonth:constant.type.timeOffWorkLog
                      </option>
                      <option
                        id="type__item__VACATION_WORK_LOG"
                        value="VACATION_WORK_LOG"
                      >
                        workMonth:constant.type.vacationWorkLog
                      </option>
                    </select>
                    <div
                      className="SelectField__caret__-27wG"
                    >
                      <span
                        className="SelectField__caretIcon__hQwUY"
                      />
                    </div>
                  </div>
                </label>
              </li>
              <li
                className="List__item__31l9a"
              >
                <div
                  className="mb-1"
                >
                  workLog:element.startTime
                </div>
                <div>
                  <div
                    className="fieldDate"
                  >
                    <label
                      className="TextField__root__3yDmd
        
        TextField__rootLayoutVertical__3YCcU
        
        TextField__rootSizeMedium__3o17O
        
        TextField__rootVariantOutline__1RuTC"
                      htmlFor="startHour"
                    >
                      <div
                        className="TextField__label__2bJzQ
          TextField__isLabelHidden__IR-3m"
                        id="startHour__label"
                      >
                        workLog:element.startHour
                      </div>
                      <div
                        className="TextField__inputContainer__3NDux"
                      >
                        <input
                          className="TextField__input__dZrOw"
                          disabled={false}
                          id="startHour"
                          onChange={[Function]}
                          placeholder={null}
                          required={false}
                          size={2}
                          type="text"
                          value="00"
                        />
                      </div>
                    </label>
                  </div>
                  <span
                    className="colon"
                  >
                    :
                  </span>
                  <div
                    className="fieldDate"
                  >
                    <label
                      className="TextField__root__3yDmd
        
        TextField__rootLayoutVertical__3YCcU
        
        TextField__rootSizeMedium__3o17O
        
        TextField__rootVariantOutline__1RuTC"
                      htmlFor="startMinute"
                    >
                      <div
                        className="TextField__label__2bJzQ
          TextField__isLabelHidden__IR-3m"
                        id="startMinute__label"
                      >
                        workLog:element.startMinute
                      </div>
                      <div
                        className="TextField__inputContainer__3NDux"
                      >
                        <input
                          className="TextField__input__dZrOw"
                          disabled={false}
                          id="startMinute"
                          onChange={[Function]}
                          placeholder={null}
                          required={false}
                          size={2}
                          type="text"
                          value="57"
                        />
                      </div>
                    </label>
                  </div>
                   h
                </div>
              </li>
              <li
                className="List__item__31l9a"
              >
                <div
                  className="mb-1"
                >
                  workLog:element.endTime
                </div>
                <div>
                  <div
                    className="fieldDate"
                  >
                    <label
                      className="TextField__root__3yDmd
        
        TextField__rootLayoutVertical__3YCcU
        
        TextField__rootSizeMedium__3o17O
        
        TextField__rootVariantOutline__1RuTC"
                      htmlFor="endHour"
                    >
                      <div
                        className="TextField__label__2bJzQ
          TextField__isLabelHidden__IR-3m"
                        id="endHour__label"
                      >
                        workLog:element.endHour
                      </div>
                      <div
                        className="TextField__inputContainer__3NDux"
                      >
                        <input
                          className="TextField__input__dZrOw"
                          disabled={false}
                          id="endHour"
                          onChange={[Function]}
                          placeholder={null}
                          required={false}
                          size={2}
                          type="text"
                          value="01"
                        />
                      </div>
                    </label>
                  </div>
                  <span
                    className="colon"
                  >
                    :
                  </span>
                  <div
                    className="fieldDate"
                  >
                    <label
                      className="TextField__root__3yDmd
        
        TextField__rootLayoutVertical__3YCcU
        
        TextField__rootSizeMedium__3o17O
        
        TextField__rootVariantOutline__1RuTC"
                      htmlFor="endMinute"
                    >
                      <div
                        className="TextField__label__2bJzQ
          TextField__isLabelHidden__IR-3m"
                        id="endMinute__label"
                      >
                        workLog:element.endMinute
                      </div>
                      <div
                        className="TextField__inputContainer__3NDux"
                      >
                        <input
                          className="TextField__input__dZrOw"
                          disabled={false}
                          id="endMinute"
                          onChange={[Function]}
                          placeholder={null}
                          required={false}
                          size={2}
                          type="text"
                          value="03"
                        />
                      </div>
                    </label>
                  </div>
                   h
                </div>
              </li>
            </ul>
          </div>
        </div>
      </form>
    </div>
    <div
      className="Modal__footer__2YXCJ"
    >
      <button
        className="Button__root__3zrxR
        Button__priorityDefault__hcWO8
        Button__sizeMedium__168V1
        Button__variantPrimary__30PKn"
        disabled={false}
        onClick={[Function]}
        title={null}
        type="button"
      >
        <span
          className="Button__label__3YN6e"
        >
          general:action.save
        </span>
      </button>
      <button
        className="Button__root__3zrxR
        Button__priorityFlat__50w12
        Button__sizeMedium__168V1
        Button__variantPrimary__30PKn"
        disabled={false}
        onClick={[Function]}
        title={null}
        type="button"
      >
        <span
          className="Button__label__3YN6e"
        >
          general:action.close
        </span>
      </button>
    </div>
  </div>
</div>
`;
